force-app/main/default/objects/PDLM__Where_Used__c/PDLM__Where_Used__c.object-meta.xml
<CustomObject>
    <description>indicates which items contain a given item</description>
    <label>Where Used</label>
    <nameField>
        <label>Used</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Where Used</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>