force-app/main/default/objects/PDLM__Where_Used__c/fields/PDLM__Immediate__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Immediate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OBSOLETE</label>
    <referenceTo>PDLM__Item__c</referenceTo>
    <relationshipLabel>Immediate</relationshipLabel>
    <relationshipName>Immediate</relationshipName>
    <type>Lookup</type>
</CustomField>