force-app/main/default/objects/PDLM__Where_Used__c/fields/PDLM__Immediate_Rev__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Immediate_Rev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OBSOLETE</label>
    <referenceTo>PDLM__Item_Revision__c</referenceTo>
    <relationshipLabel>Immediate_Rev</relationshipLabel>
    <relationshipName>Immediate_Rev</relationshipName>
    <type>Lookup</type>
</CustomField>