force-app/main/default/objects/PDLM__Where_Used__c/fields/PDLM__parent_assembly__c.field-meta.xml
<CustomField>
    <fullName>PDLM__parent_assembly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>parent_assembly</label>
    <referenceTo>PDLM__Assembly__c</referenceTo>
    <relationshipLabel>parent_assembly</relationshipLabel>
    <relationshipName>parent_assembly</relationshipName>
    <type>Lookup</type>
</CustomField>