force-app/main/default/objects/PDLM__Where_Used__c/fields/PDLM__Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Primary_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>OBSOLETE</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>