force-app/main/default/objects/PDLM__Where_Used__c/fields/PDLM__Top_Revision__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Top_Revision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Revision</label>
    <referenceTo>PDLM__Item_Revision__c</referenceTo>
    <relationshipLabel>Where Used</relationshipLabel>
    <relationshipName>Where_Used</relationshipName>
    <type>Lookup</type>
</CustomField>